fix: change sidebar avatar border color to black for improved contrast

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -147,8 +147,7 @@
     position: relative;
     display: inline-block;
     border-radius: 50%;
-    border: 2px solid #106cf5;
-    animation: pulse 3s infinite;
+    border: 2px solid #000000;
   }
 
 
